# ExamManagement

./: README.md  render.yaml
backend/: .env.example  main.py  models.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 12ecb458f109_add_teacher_subjects.py  1acc0baf9e71_teacher_synced_with_subject_taught.py  1f3ea32aa5a4_synced_teacehr_subjects.py  26bee25b609f_initial_schema.py  598f236c3d83_add_student_subject_marks_and_teacher_.py  77fac7d0603e_isolated_teachers_for_each_students_and_.py  8eb9206ba995_persisted_refresh_tokens.py  c6fde2db1fca_role_column_added.py
backend/scripts/: create_first_admin.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_delete.py  test_export_email.py  test_marks.py  test_report_card.py
docs/superpowers/specs/: 2026-04-17-jwt-auth-and-rbac-plan.md  2026-04-17-rbac-and-marks-models-design.md  2026-04-21-teacher-subjects-and-student-auto-enroll-design.md
